--- a/My_Single_Page_Site.html
+++ b/My_Single_Page_Site.html
@@ -9,7 +9,7 @@
 <h2>Who am I?</h2>
 <p>I am a musician and an aspiring pilot. I have played the Violin since 2015, the Clarinet since 2016, and the Bassoon since 2017.
 I believe that music has helped shape me into who I am today, and music has helped me meet new people and make new friends.
-I hope to one day attemd the United States Air Force Adademy and later fly cargo planes for the U.S. Air Force. One of my favorite
+I hope to one day attemd the United States Air Force Academy and later fly cargo planes for the U.S. Air Force. One of my favorite
 times of the year is fall and the holiday season, because I love the cool air and the fall events such as football games and band competitions. 
 I also hope to one day move back to NYC, where I lived from 2005 through the first half of 2012. If I could start any buisness right now, I would start a buisness which fixes computers.
 What I want to get out of life is having amazing experiences with family and friends, and to have the ability to travel the world and 
